NXP-32999: Remove nuxeo-platform-relations-jena-plugin