@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2010 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2010-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
  *     Antoine Taillefer
  *     Thomas Roger
  */
-
 package org.nuxeo.ecm.platform.rendition.publisher;
 
 import static org.junit.Assert.assertEquals;
@@ -62,12 +61,11 @@ import org.nuxeo.runtime.test.runner.FeaturesRunner;
 @Deploy("org.nuxeo.ecm.platform.versioning.api")
 @Deploy("org.nuxeo.ecm.platform.versioning")
 @Deploy("org.nuxeo.ecm.relations")
-@Deploy("org.nuxeo.ecm.relations.jena")
+@Deploy("org.nuxeo.ecm.relations.default.config")
 @Deploy("org.nuxeo.ecm.platform.publisher")
 @Deploy("org.nuxeo.ecm.platform.task.core")
 @Deploy("org.nuxeo.ecm.platform.task.testing")
 @Deploy("org.nuxeo.ecm.platform.rendition.publisher")
-@Deploy("org.nuxeo.ecm.platform.rendition.publisher:relations-default-jena-contrib.xml")
 public class TestRenditionPublication {
 
     @Inject
@@ -78,14 +76,14 @@ public class TestRenditionPublication {
 
     @Test
     public void shouldPublishASimpleProxyIfNoRenditionNameIsDefined() {
-        String defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        String defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree tree = publisherService.getPublicationTree(defaultTreeName, session, null);
 
         List<PublicationNode> nodes = tree.getChildrenNodes();
         assertEquals(1, nodes.size());
-        assertEquals("Section1", nodes.get(0).getTitle());
+        assertEquals("Section1", nodes.getFirst().getTitle());
 
-        PublicationNode targetNode = nodes.get(0);
+        PublicationNode targetNode = nodes.getFirst();
         assertTrue(tree.canPublishTo(targetNode));
 
         DocumentModel file = session.createDocumentModel("/", "dummy", "File");
@@ -102,14 +100,14 @@ public class TestRenditionPublication {
     @Test
     @ConditionalIgnoreRule.Ignore(condition = ConditionalIgnoreRule.IgnoreWindows.class, cause = "NXP-26757")
     public void shouldPublishAPDFRendition() {
-        String defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        String defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree tree = publisherService.getPublicationTree(defaultTreeName, session, null);
 
         List<PublicationNode> nodes = tree.getChildrenNodes();
         assertEquals(1, nodes.size());
-        assertEquals("Section1", nodes.get(0).getTitle());
+        assertEquals("Section1", nodes.getFirst().getTitle());
 
-        PublicationNode targetNode = nodes.get(0);
+        PublicationNode targetNode = nodes.getFirst();
         assertTrue(tree.canPublishTo(targetNode));
 
         DocumentModel file = session.createDocumentModel("/", "dummy", "File");
@@ -176,9 +174,9 @@ public class TestRenditionPublication {
     @Test
     @Deploy("org.nuxeo.ecm.platform.rendition.publisher:test-rendition-definition-providers-contrib.xml")
     public void shouldTakeIntoAccountRenditionDefinitionProviders() {
-        String defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        String defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree tree = publisherService.getPublicationTree(defaultTreeName, session, null);
-        PublicationNode targetNode = tree.getChildrenNodes().get(0);
+        PublicationNode targetNode = tree.getChildrenNodes().getFirst();
 
         DocumentModel file = session.createDocumentModel("/", "dummy", "File");
         file = session.createDocument(file);
