@@ -73,16 +73,15 @@ import org.nuxeo.runtime.test.runner.FeaturesRunner;
 @Deploy("org.nuxeo.ecm.platform.versioning.api")
 @Deploy("org.nuxeo.ecm.platform.versioning")
 @Deploy("org.nuxeo.ecm.relations")
-@Deploy("org.nuxeo.ecm.relations.jena")
+@Deploy("org.nuxeo.ecm.relations.default.config")
 @Deploy("org.nuxeo.ecm.platform.publisher")
 @Deploy("org.nuxeo.ecm.platform.usermanager")
 @Deploy("org.nuxeo.ecm.platform.task.core")
 @Deploy("org.nuxeo.ecm.platform.task.testing")
 @Deploy("org.nuxeo.ecm.platform.rendition.publisher")
 @Deploy("org.nuxeo.ecm.actions")
-@Deploy("org.nuxeo.ecm.platform.rendition.publisher:relations-default-jena-contrib.xml")
 @Deploy("org.nuxeo.ecm.platform.rendition.publisher:test-sql-directories-contrib.xml")
-public class TestRenditionPublicationWFAprove {
+public class TestRenditionPublicationWFApprove {
 
     @Inject
     protected CoreSession session;
@@ -192,23 +191,23 @@ public class TestRenditionPublicationWFAprove {
     @ConditionalIgnoreRule.Ignore(condition = ConditionalIgnoreRule.IgnoreWindows.class, cause = "NXP-26757")
     public void testApproveRenditionPublishing() {
 
-        String defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        String defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree tree = publisherService.getPublicationTree(defaultTreeName, session, null);
 
         List<PublicationNode> nodes = tree.getChildrenNodes();
         assertEquals(1, nodes.size());
-        assertEquals("Section1", nodes.get(0).getTitle());
+        assertEquals("Section1", nodes.getFirst().getTitle());
 
         // start real testing
         changeUser("myuser1");
-        defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree treeUser1 = publisherService.getPublicationTree(defaultTreeName, session, factoryParams);
 
         nodes = treeUser1.getChildrenNodes();
         assertEquals(1, nodes.size());
-        assertEquals("Section1", nodes.get(0).getTitle());
+        assertEquals("Section1", nodes.getFirst().getTitle());
 
-        PublicationNode targetNode = nodes.get(0);
+        PublicationNode targetNode = nodes.getFirst();
         assertTrue(treeUser1.canPublishTo(targetNode));
 
         PublishedDocument publishedDocument = treeUser1.publish(doc2Publish, targetNode,
@@ -231,7 +230,7 @@ public class TestRenditionPublicationWFAprove {
                 new DocumentLocationImpl(doc2Publish));
         assertEquals(1, publishedDocuments.size());
 
-        publishedDocument = publishedDocuments.get(0);
+        publishedDocument = publishedDocuments.getFirst();
         assertTrue(publishedDocument.isPending());
 
         treeUser2.validatorPublishDocument(publishedDocument, "Approved!");
